--- a/IPOHTML/css/blog-home.css
+++ b/IPOHTML/css/blog-home.css
@@ -7,6 +7,11 @@
 body {
   padding-top: 54px;
 }
+body {
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/bgHistory.jpg');
+}
 
 @media (min-width: 992px) {
   body {
