--- a/IPOHTML/css/contacto.css
+++ b/IPOHTML/css/contacto.css
@@ -30,7 +30,7 @@ a:focus {
 
 a:hover {
 	text-decoration: none;
-	color: #57b846;
+	color: #0069d9;
 }
 
 /*---------------------------------------------*/
@@ -209,7 +209,7 @@ textarea.input1 + .shadow-input1 {
   width: 100%;
   height: 100%;
   box-shadow: 0px 0px 0px 0px;
-  color: rgba(87,184,70, 0.5);
+  color: #0069d9;
 }
 
 .input1:focus + .shadow-input1 {
@@ -246,7 +246,7 @@ textarea.input1 + .shadow-input1 {
   min-width: 193px;
   height: 50px;
   border-radius: 25px;
-  background: #57b846;
+  background: #0069d9;
   font-family: Montserrat-Bold;
   font-size: 15px;
   line-height: 1.5;
