--- a/IPOHTML/css/inicio.css
+++ b/IPOHTML/css/inicio.css
@@ -37,8 +37,8 @@ body{
     box-shadow: 6px 6px 25px rgba(0, 0, 0, 0.15);
 }
 .btn-primary{
-    background-color:#3340f7 !important;
-    border-color: #2231ff !important;
+    background-color:#0069d9!important;
+    border-color: #0069d9 !important;
 }
 .btn-primary:hover, .btn-primary:focus{
     color: #fff !important;
