--- a/IPOHTML/css/register.css
+++ b/IPOHTML/css/register.css
@@ -68,8 +68,8 @@ a, a:hover{
     box-shadow: 6px 6px 25px rgba(0, 0, 0, 0.15);
 }
 .btn-primary{
-    background-color:#3340f7 !important;
-    border-color: #2231ff !important;
+    background-color:#0069d9 !important;
+    border-color: #0069d9 !important;
 }
 .btn-primary:hover, .btn-primary:focus{
     color: #fff !important;
@@ -96,12 +96,12 @@ a, a:hover{
     border-color: transparent !important;
 }
 .text-primary{
-    color: #ff5722 !important;
+    color: #0069d9 !important;
 }
 .custom-control-input:checked~.custom-control-indicator {
     color: #fff;
-    background-color: #ff5722;
-    outline-color: #ff5722; 
+    background-color: #0069d9;
+    outline-color: #0069d9; 
 }
 .content-divider.center {
     text-align: center;
