--- a/IPOHTML/css/blog-home.css
+++ b/IPOHTML/css/blog-home.css
@@ -4,14 +4,13 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-blog-home/blob/master/LICENSE)
  */
 
-
 body {
   padding-top: 54px;
 }
 body {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/fondoPrincipal.jpg");
+    background-image: url('../img/bgHistory.jpg');
 }
 
 @media (min-width: 992px) {
@@ -23,19 +22,6 @@ body {
 .desplegable{
 	
 }
-
-h1{
-  font-size: 4em;
-}
-
-hr { 
-  border-top: 2px solid #0069d9 ; 
-  border-bottom: 2px solid #0069d9 ; 
-  border-left:none; 
-  border-right:none; 
-  height: 6px; 
-}
-
 .navbar-wrapper {
   position: absolute;
   top: 0;
