--- a/IPOHTML/css/blog-post.css
+++ b/IPOHTML/css/blog-post.css
@@ -10,7 +10,7 @@ body {
 body {
     width: 100%;
     height: 100%;
-	background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/fondoPrincipal.jpg");
+	background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/bgHistory.jpg");
 	
 }
 @media (min-width: 992px) {
