--- a/IPOHTML/css/blog-home.css
+++ b/IPOHTML/css/blog-home.css
@@ -4,13 +4,14 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-blog-home/blob/master/LICENSE)
  */
 
+
 body {
   padding-top: 54px;
 }
 body {
     width: 100%;
     height: 100%;
-    background-image: url('../img/bgHistory.jpg');
+    background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/fondoPrincipal.jpg");
 }
 
 @media (min-width: 992px) {
@@ -22,6 +23,19 @@ body {
 .desplegable{
 	
 }
+
+h1{
+  font-size: 4em;
+}
+
+hr { 
+  border-top: 2px solid #0069d9 ; 
+  border-bottom: 2px solid #0069d9 ; 
+  border-left:none; 
+  border-right:none; 
+  height: 6px; 
+}
+
 .navbar-wrapper {
   position: absolute;
   top: 0;
@@ -68,4 +82,13 @@ margin-right: 15px !important;
 .dropdown-menu {
 padding: 0px;
 overflow: hidden;
+}
+#icon{
+	width:2rem;
+
+}
+#d{
+	color: black;
+	font-family: sans-serif;
+	font-size: 0.9rem;
 }
