--- a/IPOHTML/css/blog-post.css
+++ b/IPOHTML/css/blog-post.css
@@ -10,7 +10,7 @@ body {
 body {
     width: 100%;
     height: 100%;
-	background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/bgHistory.jpg");
+	background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/fondoPrincipal.jpg");
 	
 }
 @media (min-width: 992px) {
@@ -33,4 +33,32 @@ body {
 	color: black;
 	font-family: sans-serif;
 	font-size: 0.9rem;
+}
+#icon{
+	width:2rem;
+
+}
+.navbar-wrapper .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+.navbar-wrapper .navbar {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.navbar-content
+{
+    width:320px;
+    padding: 15px;
+    padding-bottom:0px;
+}
+.navbar-content:before, .navbar-content:after
+{
+    display: table;
+    content: "";
+    line-height: 0;
+}
+.navbar-nav.navbar-right:last-child {
+margin-right: 15px !important;
 }
