--- a/IPOHTML/css/contacto.css
+++ b/IPOHTML/css/contacto.css
@@ -8,7 +8,7 @@
 body, html {
 	height: 100%;
   font-family: Montserrat-Regular, sans-serif;
-  background-image: url('../img/bgHistory.jpg');
+  background-image: linear-gradient(rgba(82, 72, 72, 0.47), rgba(15, 19, 20, 0)),url("../img/fondoPrincipal.jpg");
 }
 
 /*---------------------------------------------*/
@@ -30,7 +30,7 @@ a:focus {
 
 a:hover {
 	text-decoration: none;
-	color: #57b846;
+	color: #3340f7;
 }
 
 /*---------------------------------------------*/
@@ -116,10 +116,13 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  
+  
 }
 
 .container-contact1 {
   width: 1163px;
+  height: 600px;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -132,6 +135,9 @@ iframe {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  border: #333333;
+  border-style: double;
+
 
   padding: 90px 130px 88px 148px;
 }
@@ -161,6 +167,7 @@ iframe {
   line-height: 1.2;
   text-align: center;
   padding-bottom: 44px;
+  font-size:30px;
 }
 
 input.input1 {
@@ -209,7 +216,7 @@ textarea.input1 + .shadow-input1 {
   width: 100%;
   height: 100%;
   box-shadow: 0px 0px 0px 0px;
-  color: rgba(87,184,70, 0.5);
+  color: #0069d9;
 }
 
 .input1:focus + .shadow-input1 {
@@ -246,7 +253,7 @@ textarea.input1 + .shadow-input1 {
   min-width: 193px;
   height: 50px;
   border-radius: 25px;
-  background: #57b846;
+  background: #0069d9;
   font-family: Montserrat-Bold;
   font-size: 15px;
   line-height: 1.5;
