--- a/IPOHTML/css/inicio.css
+++ b/IPOHTML/css/inicio.css
@@ -4,7 +4,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-image: url('../img/pizarra.jpg');
+    background-image: url("../img/fondoPrincipal2.jpg");
     background-size: 100%
 }
 body{
@@ -43,3 +43,11 @@ body{
 .btn-primary:hover, .btn-primary:focus{
     color: #fff !important;
 }
+
+hr { 
+    border-top: 2px solid #0069d9 ; 
+    border-bottom: 2px solid #0069d9 ; 
+    border-left:none; 
+    border-right:none; 
+    height: 6px; 
+  }
